# personal-website

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Earthfile  MODULE.bazel  Makefile  README.md  TODO.md  config.toml  gulpfile.js  package-lock.json  package.json  postcss.config.js  requirements-ai.txt  requirements.txt  requirements_lock.txt  summary_config.json  upload-iastate.batch  wrangler.toml
.github/workflows/: auto-update.yml  deploy-cloudflare.yml  main.yml
archetypes/: blog.md
archetypes/blog/: index.md
content/blog/: blog_on_gke.md  getting_lit_with_home_assistant.md  kubernetes_with_kubespray.md  storage_upgrade.md
content/blog/bibliography-test/: index.md
content/blog/ceph_drive_replacement/: index.md
content/blog/cert_updates/: index.md
content/blog/kubernetes_with_kubespray/: cluster_diagram.puml  index.md
content/blog/the_powerline_effect/: index.md
content/isu portfolio/: ethics_essay.md
content/isu-portfolio/: cumulative_reflection.md  ethics_essay.md  general_educational_reflection.md  outside_the_classroom.md  senior_design.md  work_experience.md
content/photography/: eclipse.md  reiman-gardens.md
content/post/: ethics_essay.md
content/projects/: blackboardbinder.md  careeraide.md  kinectwithyoga.md  marsrover.md  peeps.md  skydev.md
content/test-summaries/: long-summary.md  medium-summary.md  short-summary.md
deployment/: Dockerfile  default.conf  nginx.conf  personal-site-deployment.yml  personal-site.yaml  upload-iastate.batch
deployment/argocd/: install.sh
deployment/argocd/applications/: personal-website.yaml
deployment/personal-website/: Chart.yaml  values.yaml
deployment/personal-website/files/: default.conf  nginx.conf  ssl.conf
deployment/personal-website/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  ingress.yaml  service.yaml
docs/: frontmatter-template.md
docs/bugs/in-progress/: summary-overflow.md
docs/bugs/open/: summary-overflow.md
docs/operations/: argocd.md
docs/tasks/: ai-summary-implementation.md  argocd-integration.md  cloudflare-deployment.md  container-deployment.md  web-improvements.md
layouts/shortcodes/: bibliography.html  cite.html
resources/favicon/: webicon.sh
scripts/: add-ai-summaries.sh  ai_summary_generator.py  ai_summary_providers.py  ai_summary_simple.py  generate-ai-summaries.sh  test-ai-integration.py  validate-summary-fix.js
static/: keybase.txt
static/favicons/: favicons.html  manifest.json  manifest.webapp
tests/e2e/: BUILD.bazel  test_site.py
themes/grid-side/layouts/partials/core/: main-menu.html
themes/grid-side/layouts/partials/homepage/: header-logo.html  single.html
themes/grid-side/layouts/partials/post/: page-item.html  single.html
themes/grid-side/layouts/partials/project/: single.html
tools/critical-css/: BUILD.bazel  extract.py  inline.py  install_browsers.py  test_browser.py
tools/purgecss/: BUILD.bazel  analyze.py  prune.py
