load("@build_stack_rules_hugo//hugo:rules.bzl", "hugo_site", "hugo_serve")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

hugo_site(
    name = "site",
    config = "config.toml", 
    content = glob(["content/**"]),
    layouts = glob(["layouts/**"]),
    static = glob(["static/**"]),
    theme = "//themes/espouse",
    quiet = False,
)

hugo_serve(
    name = "serve",
    dep = [":site"],
    )

pkg_tar(
    name = "static_assets",
    srcs = [":site"],
    package_dir = "/usr/share/nginx/html",
    strip_prefix = "/site",
)

pkg_tar(
    name = "nginx_cache_dir",
    empty_dirs = ["/var/cache/nginx"],
)

oci_image(
    name = "nginx_container",
    base = "@chainguard_nginx",
    entrypoint = ["/usr/sbin/nginx", "-g", "daemon off;"],
    tars = [
        ":static_assets",
        ":nginx_configs",
        ":nginx_cache_dir",
    ],
    visibility = ["//visibility:public"],
)

# Load target for local testing
oci_load(
    name = "nginx_load",
    image = ":nginx_container",
    repo_tags = ["ghcr.io/tstapler/personal-website:latest"],
)

# Filegroup to access the tarball output
filegroup(
    name = "nginx_image_tarball",
    srcs = [":nginx_load"],
    output_group = "tarball",
)

# Runnable target to test locally
genrule(
    name = "nginx_test",
    srcs = [":nginx_image_tarball"],
    outs = ["run_nginx.sh"],
    cmd = """echo '#!/bin/bash
docker load -i $(location :nginx_image_tarball)
docker run -p 1314:80 ghcr.io/tstapler/personal-website:latest' > $@
    """,
    executable = True,
)

# Push target for CI
genrule(
    name = "docker_push",
    srcs = [":nginx_image_tarball"],
    outs = ["push.sh"],
    cmd = """echo '#!/bin/bash
docker load -i $(location :nginx_image_tarball)
docker push ghcr.io/tstapler/personal-website:latest' > $@
    """,
    executable = True,
)

pkg_tar(
    name = "nginx_main_config",
    srcs = ["deployment/personal-website/files/nginx.conf"],
    package_dir = "/etc/nginx",
    strip_prefix = "deployment/personal-website/files",
)

pkg_tar(
    name = "nginx_server_configs",
    srcs = [
        "deployment/personal-website/files/default.conf",
        # ssl.conf excluded - requires TLS certs, handled by Kubernetes ingress
    ],
    package_dir = "/etc/nginx/conf.d",
    strip_prefix = "deployment/personal-website/files",
)

pkg_tar(
    name = "nginx_configs",
    deps = [
        ":nginx_main_config",
        ":nginx_server_configs",
    ],
)

