module(
    name = "personal-website",
    version = "0.1.0",
    compatibility_level = 1,
)

# Hugo rules
bazel_dep(name = "build_stack_rules_hugo", version = "0.0.9")


git_override(
    module_name = "build_stack_rules_hugo",
    remote = "https://github.com/tstapler/rules_hugo.git",
    commit = "f568451999daafa1db31c274eff0946ce84a5e01",
)

# Register Hugo toolchain
hugo_register_toolchains = use_extension("@build_stack_rules_hugo//hugo:extensions.bzl", "hugo_register_toolchains")
use_repo(hugo_register_toolchains, "hugo")
#hugo_rules = use_extension(
#    "@@build_stack_rules_hugo//hugo:internal/extensions.bzl",
#    "hugo_extension",
#)

#hugo_rules.hugo(
#    name = "hugo",
#    version = "0.145.0",
#    extended = True,
#)

# Other dependencies
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.2.2")
bazel_dep(name = "rules_python", version = "0.40.0")

# Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

# Configure uv as dependency manager (dev tool)
uv = use_extension(
    "@rules_python//python/uv:uv.bzl",
    "uv",
    dev_dependency = True,
)
uv.configure(version = "0.6.2")

# Python pip dependencies (using uv under the hood)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "personal_website_py_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "personal_website_py_deps")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "chainguard_nginx",
    digest = "sha256:50b986b188c26457d060c9e16665b51d2e5e252019ba4e921cb990c71cd24802",
    image = "cgr.dev/chainguard/nginx",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "chainguard_nginx", "chainguard_nginx_linux_amd64", "chainguard_nginx_linux_arm64")
