load("@rules_python//python:defs.bzl", "py_test")
load("@personal_website_py_deps//:requirements.bzl", "requirement")

py_test(
    name = "site_test",
    srcs = ["test_site.py"],
    main = "test_site.py",
    data = ["//:site"],
    deps = [
        requirement("playwright"),
    ],
    tags = ["local"],
)
